--- a/src/package.xml
+++ b/src/package.xml
@@ -2,17 +2,20 @@
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <fullName>mbmspackage</fullName>
     <types>
-        <members>AuthorBuilder</members>
-        <members>AuthorsListController</members>
+        <members>ArtistBuilder</members>
+        <members>ArtistBuilderTest</members>
+        <members>ArtistsListController</members>
         <members>BookBuilder</members>
+        <members>BookBuilderTest</members>
         <members>BooksListController</members>
         <members>MBMS_Constants</members>
         <members>MovieBuilder</members>
+        <members>MovieBuilderTest</members>
         <members>MoviesListController</members>
         <name>ApexClass</name>
     </types>
     <types>
-        <members>authorsList</members>
+        <members>artistsList</members>
         <members>booksList</members>
         <members>moviesList</members>
         <name>AuraDefinitionBundle</name>
@@ -22,12 +25,12 @@
         <name>CustomApplication</name>
     </types>
     <types>
-        <members>MBMS_Author__c.MBMS_Birthplace__c</members>
-        <members>MBMS_Author__c.MBMS_Date_of_Birth__c</members>
-        <members>MBMS_Author__c.MBMS_Date_of_Death__c</members>
-        <members>MBMS_Author__c.MBMS_Description__c</members>
-        <members>MBMS_Author__c.MBMS_Title__c</members>
-        <members>MBMS_Book__c.MBMS_Author__c</members>
+        <members>MBMS_Artist__c.MBMS_Birthplace__c</members>
+        <members>MBMS_Artist__c.MBMS_Date_of_Birth__c</members>
+        <members>MBMS_Artist__c.MBMS_Date_of_Death__c</members>
+        <members>MBMS_Artist__c.MBMS_Description__c</members>
+        <members>MBMS_Artist__c.MBMS_Title__c</members>
+        <members>MBMS_Book__c.MBMS_Artist__c</members>
         <members>MBMS_Book__c.MBMS_Cover_Image_URL__c</members>
         <members>MBMS_Book__c.MBMS_Cover_Image__c</members>
         <members>MBMS_Book__c.MBMS_Description__c</members>
@@ -39,13 +42,13 @@
         <name>CustomField</name>
     </types>
     <types>
-        <members>MBMS_Author__c</members>
+        <members>MBMS_Artist__c</members>
         <members>MBMS_Book__c</members>
         <members>MBMS_Movie__c</members>
         <name>CustomObject</name>
     </types>
     <types>
-        <members>MBMS_Author__c</members>
+        <members>MBMS_Artist__c</members>
         <members>MBMS_Book__c</members>
         <members>MBMS_Movie__c</members>
         <name>CustomTab</name>
@@ -56,13 +59,13 @@
         <name>FlexiPage</name>
     </types>
     <types>
-        <members>MBMS_Author__c-Author Layout</members>
+        <members>MBMS_Artist__c-Artist Layout</members>
         <members>MBMS_Book__c-Book Layout</members>
         <members>MBMS_Movie__c-Movie Layout</members>
         <name>Layout</name>
     </types>
     <types>
-        <members>MBMS_Author__c.All</members>
+        <members>MBMS_Artist__c.All</members>
         <members>MBMS_Book__c.All</members>
         <members>MBMS_Movie__c.All</members>
         <name>ListView</name>
