Add test class for artists apex controller

--- a/src/package.xml
+++ b/src/package.xml
@@ -5,6 +5,7 @@
         <members>ArtistBuilder</members>
         <members>ArtistBuilderTest</members>
         <members>ArtistsListController</members>
+        <members>ArtistsListControllerTest</members>
         <members>BookBuilder</members>
         <members>BookBuilderTest</members>
         <members>BooksListController</members>
