--- a/src/package.xml
+++ b/src/package.xml
@@ -39,6 +39,8 @@
         <members>MBMS_Book__c.MBMS_Cover_Image__c</members>
         <members>MBMS_Book__c.MBMS_Description__c</members>
         <members>MBMS_Book__c.MBMS_Title__c</members>
+        <members>MBMS_Movie_Actor__c.MBMS_Artist__c</members>
+        <members>MBMS_Movie_Actor__c.MBMS_Movie__c</members>
         <members>MBMS_Movie__c.MBMS_Description__c</members>
         <members>MBMS_Movie__c.MBMS_Director__c</members>
         <members>MBMS_Movie__c.MBMS_Title__c</members>
@@ -48,6 +50,7 @@
     <types>
         <members>MBMS_Artist__c</members>
         <members>MBMS_Book__c</members>
+        <members>MBMS_Movie_Actor__c</members>
         <members>MBMS_Movie__c</members>
         <name>CustomObject</name>
     </types>
@@ -65,6 +68,7 @@
     <types>
         <members>MBMS_Artist__c-Artist Layout</members>
         <members>MBMS_Book__c-Book Layout</members>
+        <members>MBMS_Movie_Actor__c-Movie Actor Layout</members>
         <members>MBMS_Movie__c-Movie Layout</members>
         <name>Layout</name>
     </types>
