--- a/src/package.xml
+++ b/src/package.xml
@@ -15,6 +15,8 @@
         <members>MovieActorBuilderTest</members>
         <members>MovieBuilder</members>
         <members>MovieBuilderTest</members>
+        <members>MoviePhotoBuilder</members>
+        <members>MoviePhotoBuilderTest</members>
         <members>MoviesListController</members>
         <members>MoviesListControllerTest</members>
         <name>ApexClass</name>
@@ -43,6 +45,9 @@
         <members>MBMS_Book__c.MBMS_Title__c</members>
         <members>MBMS_Movie_Actor__c.MBMS_Artist__c</members>
         <members>MBMS_Movie_Actor__c.MBMS_Movie__c</members>
+        <members>MBMS_Movie_Photo__c.MBMS_Movie__c</members>
+        <members>MBMS_Movie_Photo__c.MBMS_Photo_URL__c</members>
+        <members>MBMS_Movie_Photo__c.MBMS_Photo__c</members>
         <members>MBMS_Movie__c.MBMS_Description__c</members>
         <members>MBMS_Movie__c.MBMS_Director__c</members>
         <members>MBMS_Movie__c.MBMS_Title__c</members>
@@ -53,6 +58,7 @@
         <members>MBMS_Artist__c</members>
         <members>MBMS_Book__c</members>
         <members>MBMS_Movie_Actor__c</members>
+        <members>MBMS_Movie_Photo__c</members>
         <members>MBMS_Movie__c</members>
         <name>CustomObject</name>
     </types>
@@ -60,6 +66,7 @@
         <members>MBMS_Artist__c</members>
         <members>MBMS_Book__c</members>
         <members>MBMS_Movie_Actor__c</members>
+        <members>MBMS_Movie_Photo__c</members>
         <members>MBMS_Movie__c</members>
         <name>CustomTab</name>
     </types>
@@ -72,6 +79,7 @@
         <members>MBMS_Artist__c-Artist Layout</members>
         <members>MBMS_Book__c-Book Layout</members>
         <members>MBMS_Movie_Actor__c-Movie Actor Layout</members>
+        <members>MBMS_Movie_Photo__c-Photo Layout</members>
         <members>MBMS_Movie__c-Movie Layout</members>
         <name>Layout</name>
     </types>
@@ -79,6 +87,7 @@
         <members>MBMS_Artist__c.All</members>
         <members>MBMS_Book__c.All</members>
         <members>MBMS_Movie_Actor__c.All</members>
+        <members>MBMS_Movie_Photo__c.All</members>
         <members>MBMS_Movie__c.All</members>
         <name>ListView</name>
     </types>
