--- a/src/package.xml
+++ b/src/package.xml
@@ -39,19 +39,23 @@
         <members>MBMS_Artist__c.MBMS_Date_of_Death__c</members>
         <members>MBMS_Artist__c.MBMS_Description__c</members>
         <members>MBMS_Artist__c.MBMS_Roles__c</members>
+        <members>MBMS_Artist__c.MBMS_Status__c</members>
         <members>MBMS_Artist__c.MBMS_Title__c</members>
         <members>MBMS_Book__c.MBMS_Artist__c</members>
         <members>MBMS_Book__c.MBMS_Cover_Image_URL__c</members>
         <members>MBMS_Book__c.MBMS_Cover_Image__c</members>
         <members>MBMS_Book__c.MBMS_Description__c</members>
+        <members>MBMS_Book__c.MBMS_Status__c</members>
         <members>MBMS_Book__c.MBMS_Title__c</members>
         <members>MBMS_Movie_Actor__c.MBMS_Artist__c</members>
         <members>MBMS_Movie_Actor__c.MBMS_Movie__c</members>
         <members>MBMS_Movie_Photo__c.MBMS_Movie__c</members>
         <members>MBMS_Movie_Photo__c.MBMS_Photo_URL__c</members>
         <members>MBMS_Movie_Photo__c.MBMS_Photo__c</members>
+        <members>MBMS_Movie_Photo__c.MBMS_Status__c</members>
         <members>MBMS_Movie__c.MBMS_Description__c</members>
         <members>MBMS_Movie__c.MBMS_Director__c</members>
+        <members>MBMS_Movie__c.MBMS_Status__c</members>
         <members>MBMS_Movie__c.MBMS_Title__c</members>
         <members>MBMS_Movie__c.MBMS_Writer__c</members>
         <name>CustomField</name>
