Add new batch that removes unnecessary movie records

--- a/src/package.xml
+++ b/src/package.xml
@@ -30,6 +30,8 @@
         <members>MovieTriggerHandlerTest</members>
         <members>MoviesListController</members>
         <members>MoviesListControllerTest</members>
+        <members>MoviesRemovalBatch</members>
+        <members>MoviesRemovalBatchTest</members>
         <members>RequiringActionRecordsController</members>
         <members>RequiringActionRecordsControllerTest</members>
         <name>ApexClass</name>
