Add new virtual class to improve logging functionality

--- a/src/package.xml
+++ b/src/package.xml
@@ -36,6 +36,7 @@
         <members>MoviesRemovalBatchTest</members>
         <members>RequiringActionRecordsController</members>
         <members>RequiringActionRecordsControllerTest</members>
+        <members>VirtualBatchRunLogger</members>
         <name>ApexClass</name>
     </types>
     <types>
