Add utility class

--- a/src/package.xml
+++ b/src/package.xml
@@ -24,6 +24,7 @@
         <members>BooksListController</members>
         <members>BooksListControllerTest</members>
         <members>MBMS_Constants</members>
+        <members>MBMS_Utilities</members>
         <members>MovieActorBuilder</members>
         <members>MovieActorBuilderTest</members>
         <members>MovieBuilder</members>
