--- a/src/package.xml
+++ b/src/package.xml
@@ -25,6 +25,7 @@
         <members>BooksListControllerTest</members>
         <members>MBMS_Constants</members>
         <members>MBMS_Utilities</members>
+        <members>MBMS_UtilitiesTest</members>
         <members>MovieActorBuilder</members>
         <members>MovieActorBuilderTest</members>
         <members>MovieBuilder</members>
