Add class that allow to insert some data

--- a/src/package.xml
+++ b/src/package.xml
@@ -46,6 +46,7 @@
         <members>MoviesRemovalBatchTest</members>
         <members>RequiringActionRecordsController</members>
         <members>RequiringActionRecordsControllerTest</members>
+        <members>SampleDataFactory</members>
         <members>VirtualBatchRunLogger</members>
         <name>ApexClass</name>
     </types>
