Add android connected app to the package.xml

--- a/src/package.xml
+++ b/src/package.xml
@@ -152,5 +152,9 @@
         <members>MBMS_Movie__c.All</members>
         <name>ListView</name>
     </types>
+    <types>
+        <members>Movies_and_Books_Management_System_Android</members>
+        <name>ConnectedApp</name>
+    </types>
     <version>52.0</version>
 </Package>
