Add missing tabs and list views for new objects

--- a/src/package.xml
+++ b/src/package.xml
@@ -151,10 +151,13 @@
         <name>CustomObject</name>
     </types>
     <types>
+        <members>MBMS_Artist_News__c</members>
         <members>MBMS_Artist__c</members>
         <members>MBMS_Batch_Log__c</members>
+        <members>MBMS_Book_News__c</members>
         <members>MBMS_Book__c</members>
         <members>MBMS_Movie_Actor__c</members>
+        <members>MBMS_Movie_News__c</members>
         <members>MBMS_Movie_Photo__c</members>
         <members>MBMS_Movie__c</members>
         <name>CustomTab</name>
@@ -185,10 +188,13 @@
         <name>LightningComponentBundle</name>
     </types>
     <types>
+        <members>MBMS_Artist_News__c.All</members>
         <members>MBMS_Artist__c.All</members>
         <members>MBMS_Batch_Log__c.All</members>
+        <members>MBMS_Book_News__c.All</members>
         <members>MBMS_Book__c.All</members>
         <members>MBMS_Movie_Actor__c.All</members>
+        <members>MBMS_Movie_News__c.All</members>
         <members>MBMS_Movie_Photo__c.All</members>
         <members>MBMS_Movie__c.All</members>
         <name>ListView</name>
