Add class that allows to send a custom bell notifications

--- a/src/package.xml
+++ b/src/package.xml
@@ -33,6 +33,7 @@
         <members>BookTriggerUtility</members>
         <members>BooksListController</members>
         <members>BooksListControllerTest</members>
+        <members>CustomNotification</members>
         <members>MBMS_Constants</members>
         <members>MBMS_Utilities</members>
         <members>MBMS_UtilitiesTest</members>
